// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Bulleted table 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "bulleted",
    "indent": 1,
    "type": "table",
  },
]
`;

exports[`Table Consecutive table 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
  {
    "cells": [
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Node in table cells 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": "#hashtag",
            "text": "#hashtag",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[* deco]",
            "text": "[* deco]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[ ]",
            "text": "[ ]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "\`code\`",
            "text": "\`code\`",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "https://external.com",
            "text": "https://external.com",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[https://external.com]",
            "text": "[https://external.com]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[left https://external.com]",
            "text": "[left https://external.com]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[https://external.com right]",
            "text": "[https://external.com right]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[$ x]",
            "text": "[$ x]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[N35.6812362,E139.7649361]",
            "text": "[N35.6812362,E139.7649361]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "#hashTag",
            "text": "#hashTag",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "? helpfeel",
            "text": "? helpfeel",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "$ commandLine",
            "text": "$ commandLine",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "path": "progfay",
            "pathType": "relative",
            "raw": "[progfay.icon]",
            "type": "icon",
          },
        ],
      ],
      [
        [
          {
            "raw": "[https://image.com/image.png]",
            "text": "[https://image.com/image.png]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "content": "",
            "href": "link",
            "pathType": "relative",
            "raw": "[link]",
            "type": "link",
          },
        ],
      ],
      [
        [
          {
            "raw": "plain",
            "text": "plain",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "> quote",
            "text": "> quote",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[[progfay.icon]]",
            "text": "[[progfay.icon]]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[[https://image.com/image.png]]",
            "text": "[[https://image.com/image.png]]",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "[[strong]]",
            "text": "[[strong]]",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "node in table cells",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Simple table 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1 ",
            "text": "1 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2 ",
            "text": "2 ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "------",
            "text": "------",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "a",
            "text": "a",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "b",
            "text": "b",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "c",
            "text": "c",
            "type": "plain",
          },
        ],
      ],
    ],
    "fileName": "hello",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Staggered table 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "4",
            "text": "4",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "3",
            "text": "3",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
      ],
      [
        [
          {
            "raw": "1",
            "text": "1",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "2",
            "text": "2",
            "type": "plain",
          },
        ],
      ],
      [
        [],
      ],
    ],
    "fileName": "Staggered",
    "indent": 0,
    "type": "table",
  },
]
`;

exports[`Table Table with empty cells 1`] = `
[
  {
    "cells": [
      [
        [
          {
            "raw": " ",
            "text": " ",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "　",
            "text": "　",
            "type": "plain",
          },
        ],
        [
          {
            "raw": "  ",
            "text": "  ",
            "type": "plain",
          },
        ],
      ],
      [
        [],
        [],
        [],
      ],
    ],
    "fileName": " ",
    "indent": 0,
    "type": "table",
  },
]
`;
